<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="acm1pt.badassapp.DespensaFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="#616161"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hab1"
            android:id="@+id/lblH1"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enchufe1"
                android:checked="false"
                android:layout_gravity="right|center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/enchu1"
                android:id="@+id/lblE1"
                android:layout_gravity="left|center_vertical"
                android:textColor="#ffffff" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enchufe2"
                android:checked="false"
                android:layout_gravity="right|center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/enchu2"
                android:id="@+id/lblE2"
                android:layout_gravity="left|center_vertical"
                android:textColor="#ffffff" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enchufe3"
                android:checked="false"
                android:layout_gravity="right|center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/enchu3"
                android:id="@+id/lblE3"
                android:layout_gravity="left|center_vertical"
                android:textColor="#ffffff" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enchufe4"
                android:checked="false"
                android:layout_gravity="right|center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/luz"
                android:id="@+id/lblE4"
                android:layout_gravity="left|center_vertical"
                android:textColor="#ffffff" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/lblH2"
            android:text="@string/hab2" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enchufe5"
                android:checked="false"
                android:layout_gravity="right|center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/enchu1"
                android:id="@+id/lblE5"
                android:layout_gravity="left|center_vertical" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enchufe6"
                android:checked="false"
                android:layout_gravity="right|center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/enchu2"
                android:id="@+id/lblE6"
                android:layout_gravity="left|center_vertical" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enchufe7"
                android:checked="false"
                android:layout_gravity="right|center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/enchu3"
                android:id="@+id/lblE7"
                android:layout_gravity="left|center_vertical" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enchufe8"
                android:checked="false"
                android:layout_gravity="right|center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/luz"
                android:id="@+id/lblE8"
                android:layout_gravity="left|center_vertical" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>